add codegen tests to Circle tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,6 +164,16 @@ jobs:
     steps:
       - common_test_steps
 
+  CodegenLibmacOS10_15:
+    macos:
+      xcode: "11.1.0"
+    environment:
+      DESTINATION: platform=macOS,arch=x86_64
+      CIRCLE_XCODE_SCHEME: ApolloCodegenLib
+      CIRCLE_XCODE_SDK: macosx10.15
+    steps:
+      - common_test_steps
+
 workflows:
   version: 2
   build-and-test:
@@ -194,3 +204,5 @@ workflows:
           name: ApolloWebSocket iOS 12.4
       - WebSocketiOS11_4:
           name: ApolloWebSocket iOS 11.4
+      - CodegenLibmacOS10_15:
+          name: Swift Code Generation
